maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:32: error: illegal start of statement
		)avance 
                ^Escaper:35: error: ')' expected but 'if' found.
	if(isSelected()){
        ^Escaper:38: error: ';' expected but 'if' found.
	if(v!=0){
        ^